--- a/todo-app/index.html
+++ b/todo-app/index.html
@@ -1,27 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Todo App</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1>Todo App</h1>
-        <i class="fas fa-clipboard fa-6x"></i>
-        <h2>Add your first todo</h2>
-        <p>What do you want to get done today?</p>
-        <input type="text" placeholder="Todo notes" id="inputTodo">
-        <button id="addTodo">Add Todo</button>
-        <div id="contianer-todo">
-            <i class="far fa-times-circle" class="del"></i>
-        </div>
+      <h1>Todo App</h1>
+      <i class="fas fa-clipboard fa-6x"></i>
+      <h2>Add your first todo</h2>
+      <p>What do you want to get done today?</p>
+      <input type="text" placeholder="Todo notes" id="inputTodo" />
+      <button id="addTodo">Add Todo</button>
+      <div id="contianer-todo">
+        <i class="far fa-times-circle" class="del"></i>
+      </div>
     </div>
-    <script src="https://kit.fontawesome.com/3e7a1ed015.js" crossorigin="anonymous"></script>
-    <script src="/app.js"></script>
-</body>
-
+    <script
+      src="https://kit.fontawesome.com/3e7a1ed015.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="./app.js"></script>
+  </body>
 </html>
